<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">خروجة حلوة</string>
    <string name="sub_title_app">تعرف على اناس جدد كل يوم</string>
    <string name="welcoming_text">خروجة حلوة</string>
    <string name="enter_your_email">أدخل بريدك الالكتروني ....</string>
    <string name="email_lable">البريد</string>
    <string name="password_lable">كلمة السر</string>
    <string name="enter_your_password">.... أدخل كلمة السر</string>
    <string name="login_button">دخول</string>
    <string name="forgot_password">نسيت كلمة السر</string>
    <string name="sign_up_title">سجل</string>
    <string name="username_lable">اسم المستخدم</string>
    <string name="already_have_an_account">لديي حساب بالفعل</string>
    <string name="login_title">تسجيل الدخول</string>
    <string name="profileSettings_upload_photo">تحميل صورة</string>
    <string name="profileSettings_first_name">الاسم الاول ....</string>
    <string name="profileSettings_second_name">الاسم الثاني ....</string>
    <string name="profileSettings_address">السن ....</string>
    <string name="profileSettings_save">حفظ</string>
    <string name="login_done">تم تسجيل الدحول</string>
    <string name="signup_done">تم تسجيل حساب بنجاح</string>
    <string name="enter_username">أدخل اسم المستخدم ...</string>
    <string name="finish_signup">اكمال التسجيل</string>
    <string name="profileSettings_next">التالي</string>
    <string name="answer_the_character_question">أجب اجابة تصفك في تلك الصفة</string>
    <string name="characteristic_score">تقدير من 10 في تلك الصفة :</string>
    <string name="characteristic">الصفة</string>
    <string name="loading_the_characteristics">يتم تحميل الصفات</string>
    <string name="characteristics_not_found">لا توجد صفات محددة لذلك الشخص</string>
    <string name="no_users_found">لا يوجد أعضاء بعد</string>
    <string name="no_other_candidates">لا يوجد مرشحين اخرين</string>


    <string name="notifications_admin_channel_name">channel_1</string>
    <string name="notifications_admin_channel_description">admin_channel</string>
    <string name="main_page">الرئيسية</string>
    <string name="relocate">اعادة تحديد الموقع</string>
    <string name="gender_male">الجنس : ذكر</string>
    <string name="gender_female">الجنس : أنثى</string>
    <string name="save_done">تم الحفظ بنجاح</string>
    <string name="profile">الملف الشخصي</string>
    <string name="candidates">المرشحون</string>
    <string name="candidates_not_found">لا يوجد مرشحون</string>
    <string name="re_signin">لتغيير الاميل او اسم المستخدم يجب اعادة تسجيل الدخول لضمان امانك</string>
    <string name="wanna_meet">اود الالتقاء</string>
    <string name="deleting_request">الغاء</string>
    <string name="dating_details">تفاصيل الخروجة</string>
    <string name="not_accepted_yet">الحالة : لم يتم الاتفاق على الخروجة بشكل نهائي</string>
    <string name="accepted_request">الحالة : تم الاتفاق على الخروجة</string>
    <string name="no_dating_request">الحالة : لا يوجد طلب لخروجة</string>
    <string name="parameter_second_name">    الاسم الثاني :<xliff:g id="secondname">%s</xliff:g></string>
    <string name="parameter_firstname">     الاسم الاول :<xliff:g id="firstname">%s</xliff:g></string>
    <string name="parameter_username">    اسم المستخدم :<xliff:g id="username">%s</xliff:g></string>
    <string name="parameter_distance">    يبعد عنك :<xliff:g id="distance">m %s</xliff:g></string>
    <string name="parameter_age">    السن :<xliff:g id="age">%s</xliff:g></string>
    <string name="parameter_date">    التاريخ :<xliff:g id="date">%s</xliff:g></string>
    <string name="parameter_time">    الوقت :<xliff:g id="time">%s</xliff:g></string>
    <string name="parameter_address">    العنوان :<xliff:g id="time">%s</xliff:g></string>
    <string name="advices_for_the_date">نصائح للخروجة</string>
    <string name="error_while_choosing_the_place">حدث خطأ اثناء تحديد المكان بالرجاء المحاولة لاحقا</string>
    <string name="choosed_place_successfiully">تم تحديد المكان بنجاح</string>
    <string name="open_in_the_map">رؤية على الخريطة</string>
    <string name="dating_date">تاريخ لخروجة :</string>
    <string name="pick_dating_time">اختر وقت الخروجة</string>
    <string name="error">حدث خطأ ما</string>
    <string name="accepting">قبول الطلب</string>
    <string name="choose_valid_date_and_time">اختر تاريخ و وقت صحيحين</string>
    <string name="choose_place">اختر المكان</string>
    <string name="pick_time">اختر المعاد</string>
    <string name="dating_time">ميعاد الخروجة</string>
    <string name="change">تغيير</string>
    <string name="didnt_accept_yet">لم يتم الاتفاق بعد</string>
    <string name="not_suitable">ليس مناسب</string>
    <string name="all_accepted">تم تحديد المعاد</string>
    <string name="some_advices">بعض النصائح</string>
    <string name="address">العنوان ...</string>
    <string name="edit_characteristics">تعديل الصفات</string>
    <string name="add_more">اضف المزيد الان !</string>
    <string name="more_info_about_your_personality">نسبة شخصيتك — <xliff:g id="rate">%s</xliff:g> —
        اضف المزيد من المعلومات عن شخصيتك لتجعل الجميع يعلمك بشكل افضل</string>
    <string name="add_to_your_personality">اضف الى شخصيتك</string>
    <string name="delete">حذف</string>
    <string name="svae">جفظ</string>
    <string name="edit_questions">تعديل الاسئلة</string>
    <string name="me">أنا</string>
    <string name="boy">ولد</string>
    <string name="girl">بنت</string>
    <string name="done">تم</string>
    <string name="enter_address">ادخل العنوان</string>
    <string name="enter_email_before_click_forgot_password">دخل الاميل في حقل الاميل الاول بس كدا !</string>
    <string name="done_you_got_your_password">تمام يا سيدي روح شوف اميلك بقا و متنساش الباسورد تاني</string>
    <string name="look_something_wrong_happend">بص هو في جاجة غلط حصلت انا مش فاهم هي اية بس في يعني</string>

    <array name="governorates">
        <item>المنصورة</item>
        <item>القاهرة</item>
        <item>كفر الشيخ</item>
        <item>اسكندرية</item>
        <item>بور سعيد</item>
    </array>

    <string-array name="years">
        <item>2030</item>
        <item>2029</item>
        <item>2028</item>
        <item>2027</item>
        <item>2026</item>
        <item>2025</item>
        <item>2024</item>
        <item>2023</item>
        <item>2022</item>
        <item>2021</item>
        <item>2020</item>
        <item>2019</item>
        <item>2018</item>
        <item>2017</item>
        <item>2016</item>
        <item>2015</item>
        <item>2014</item>
        <item>2013</item>
        <item>2012</item>
        <item>2011</item>
        <item>2010</item>
        <item>2009</item>
        <item>2008</item>
        <item>2007</item>
        <item>2006</item>
        <item>2005</item>
        <item>2004</item>
        <item>2003</item>
        <item>2001</item>
        <item>2000</item>
        <item>1999</item>
        <item>1998</item>
        <item>1997</item>
        <item>1996</item>
        <item>1995</item>
        <item>1994</item>
        <item>1993</item>
        <item>1992</item>
        <item>1991</item>
        <item>1990</item>
        <item>1989</item>
        <item>1988</item>
        <item>1987</item>
        <item>1986</item>
        <item>1985</item>
        <item>1984</item>
        <item>1983</item>
        <item>1982</item>
        <item>1980</item>
        <item>1979</item>
        <item>1978</item>
        <item>1977</item>
        <item>1976</item>
        <item>1975</item>
    </string-array>

    <string-array name="months">
        <item>12</item>
        <item>11</item>
        <item>10</item>
        <item>9</item>
        <item>8</item>
        <item>7</item>
        <item>6</item>
        <item>5</item>
        <item>4</item>
        <item>3</item>
        <item>2</item>
        <item>1</item>
    </string-array>

    <string-array name="days">
        <item>31</item>
        <item>30</item>
        <item>29</item>
        <item>28</item>
        <item>27</item>
        <item>26</item>
        <item>25</item>
        <item>24</item>
        <item>23</item>
        <item>22</item>
        <item>21</item>
        <item>20</item>
        <item>19</item>
        <item>18</item>
        <item>17</item>
        <item>16</item>
        <item>15</item>
        <item>14</item>
        <item>13</item>
        <item>12</item>
        <item>11</item>
        <item>10</item>
        <item>9</item>
        <item>8</item>
        <item>7</item>
        <item>6</item>
        <item>5</item>
        <item>4</item>
        <item>3</item>
        <item>2</item>
        <item>1</item>
    </string-array>

</resources>
