<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="wrap_content" xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="#FCFCFC"
        app:layout_constraintHorizontal_bias="0.0" android:id="@+id/constraintLayout"
        xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
            android:text="@string/email_lable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="?attr/mainTextColor"
            android:fontFamily="@font/cairo_bold"
            android:id="@+id/email_re" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.893"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="4dp"/>

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/enter_your_email"
            android:ems="10"
            android:background="@drawable/edittext_bordered_rounded"
            android:id="@+id/email_entry_signup"
            android:layout_weight="1"
            android:fontFamily="@font/cairo_regular"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/email_re" android:textSize="14sp"/>

    <TextView
            android:text="@string/password_lable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="?attr/mainTextColor"
            android:fontFamily="@font/cairo_bold"
            android:id="@+id/password_re"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.912"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/username_entry_signup"/>

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/enter_your_password"
            android:ems="10"
            android:textAlignment="textEnd"
            android:background="@drawable/edittext_bordered_rounded"
            android:id="@+id/password_entry_signup"
            android:fontFamily="@font/cairo_regular"
            android:layout_weight="1"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/password_re" android:textSize="14sp"/>

    <TextView
            android:text="@string/username_lable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="?attr/mainTextColor"
            android:fontFamily="@font/cairo_bold"
            android:id="@+id/username" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.903"
            app:layout_constraintTop_toBottomOf="@+id/email_entry_signup" android:layout_marginTop="8dp"/>

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_username"
            android:ems="10"
            android:background="@drawable/edittext_bordered_rounded"
            android:id="@+id/username_entry_signup"
            android:fontFamily="@font/cairo_regular"
            android:layout_weight="1"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toBottomOf="@+id/username" android:textSize="14sp"/>


    <Button
            android:text="@string/sign_up_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/signupbtn"
            android:background="@drawable/main_button_box"
            android:textColor="@android:color/white"
            android:textAllCaps="false"
            android:fontFamily="@font/cairo_bold"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/password_entry_signup"
            app:layout_constraintHorizontal_bias="0.494"/>
    <TextView
            android:id="@+id/go_to_login"
            android:text="@string/already_have_an_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:fontFamily="@font/cairo_regular"
            android:textColor="@color/baby_blue"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.027"
            app:layout_constraintTop_toBottomOf="@+id/progressBar" android:layout_marginTop="8dp"/>
    <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:indeterminate="true"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/signupbtn"/>

</androidx.constraintlayout.widget.ConstraintLayout>
