<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Ui.Fragments.SignupLogin.SignupChoosingGenderFragment">
    <TextView
            android:text="@string/me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView5" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="172dp"
            android:fontFamily="@font/cairo_bold"
            android:textColor="@color/shade1_blue"
            android:textSize="60sp"/>
    <Button
            android:text="@string/boy"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/male_gender" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="72dp" app:layout_constraintTop_toBottomOf="@+id/textView5"
            app:layout_constraintHorizontal_bias="0.498"
            android:background="@drawable/purple_round_button"
            android:textColor="@color/white"
            android:fontFamily="@font/cairo_regular"
            android:textSize="25sp"/>
    <Button
            android:text="@string/girl"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/female_gemder" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/male_gender"
            android:background="@drawable/pink_round_button"
            android:textColor="@color/white"
            android:fontFamily="@font/cairo_regular"
            android:textSize="25sp"/>
</androidx.constraintlayout.widget.ConstraintLayout>